...
import cz.mendelu.pef.chordsnap.ui.theme.Dimensions.paddingLarge
import cz.mendelu.pef.chordsnap.ui.theme.Dimensions.spacingMedium
import cz.mendelu.pef.chordsnap.ui.theme.Dimensions.spacingSmall
import cz.mendelu.pef.chordsnap.ui.theme.Dimensions.spacingXSmall
import kotlinx.coroutines.launch

const val TestTagSettingsTitle = "TestTagSettingsTitle"
const val TestTagSettingsBackButton = "TestTagSettingsBackButton"
const val TestTagSettingsLanguageItem = "TestTagSettingsLanguageItem"
const val TestTagSettingsThemeItem = "TestTagSettingsThemeItem"
const val TestTagSettingsLanguageDialog = "TestTagSettingsLanguageDialog"
const val TestTagSettingsThemeDialog = "TestTagSettingsThemeDialog"
const val TestTagSettingsLanguageEnglish = "TestTagSettingsLanguageEnglish"
const val TestTagSettingsLanguageCzech = "TestTagSettingsLanguageCzech"
const val TestTagSettingsThemeLight = "TestTagSettingsThemeLight"
const val TestTagSettingsThemeDark = "TestTagSettingsThemeDark"
const val TestTagSettingsThemeSystem = "TestTagSettingsThemeSystem"
const val TestTagSettingsCancelButton = "TestTagSettingsCancelButton"

@OptIn(ExperimentalMaterial3Api::class)
@Composable
fun SettingsScreen(
    onNavigateBack: () -> Unit,
    viewModel: SettingsViewModel = hiltViewModel()
...
